syntax = "proto3";

option go_package = "common/api";

package api;

message Order {
     string Id = 1;
     string CustomerId = 2;
     string Status = 3;
     repeated Item Items = 4;
     string PaymentLink = 5;
}

message Item {
     string Id = 1;
     string Name = 2;
     int32 Quantity = 3;
     string PriceId = 4;
}

service OrderService {
     rpc CreateOrder (CreateOrderRequest) returns (Order);
     rpc GetOrder (GetOrderRequest) returns (Order);
     rpc UpdateOrder (Order) returns (Order);
}

message GetOrderRequest {
     string OrderId = 1;
     string CustomerId = 2;
}

message ItemsWithQuantity {
     string Id = 1;
     int32 Quantity = 2;
}

message CreateOrderRequest {
     string CustomerId = 1;
     repeated ItemsWithQuantity items = 2;
}
